--- a/app/views/users/_rates.html.erb
+++ b/app/views/users/_rates.html.erb
@@ -1,7 +1,7 @@
 <h1>Rate History</h1>
 <%# TODO: Refactor out of the view once there is a hook in the controller (Post 0.8.0). %>
 <%# Can't expect everyone to upgrade at the moment %>
-<% @rates = Rate.find(:all, :conditions => { :user_id => @user.id }) %>
+<% @rates = Rate.history_for_user(@user) %>
 
 <table class="list memberships">
 	<thead>
