--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -1,4 +1,4 @@
-<% form_tag('/todo') do |f|  %>
+<% form_for(@rate) do |f| %>
 <table class="list">
 	<thead>
 	  <th style="width:15%"><%= l(:label_date) %></th>
@@ -12,7 +12,7 @@
         <%= text_field_tag "date_from", nil, :size => 10  %><%= calendar_for('date_from') %>
       </td>
       <td>
-        <%=
+        <%= # TODO: move to controller once a hook is in place for the Admin panel
           projects = Project.find(:all, :conditions => { :status => Project::STATUS_ACTIVE}, :include => :parent)
           select_tag("project",projects_options_for_select(projects))
         %>
