--- a/app/views/rates/edit.html.erb
+++ b/app/views/rates/edit.html.erb
@@ -1,26 +1,3 @@
 <h1>Editing rate</h1>
 
-<% form_for(@rate) do |f| %>
-  <p>
-    <%= f.label :amount %><br />
-    <%= f.text_field :amount %>
-  </p>
-  <p>
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </p>
-  <p>
-    <%= f.label :project_id %><br />
-    <%= f.text_field :project_id %>
-  </p>
-  <p>
-    <%= f.label :date_in_effect %><br />
-    <%= f.date_select :date_in_effect %>
-  </p>
-  <p>
-    <%= f.submit "Update" %>
-  </p>
-<% end %>
-
-<%= link_to 'Show', @rate %> |
-<%= link_to 'Back', rates_path %>
+<%= render :partial => 'rates/form' %>
