--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -15,7 +15,7 @@
         <%= # TODO: move to controller once a hook is in place for the Admin panel
           projects = Project.find(:all, :conditions => { :status => Project::STATUS_ACTIVE}, :include => :parent)
   
-          select_tag("rate_project_id", projects_options_for_select(projects))
+          select_tag("rate[project_id]", projects_options_for_select(projects))
         %>
       </td>
       <td align="right">
