Added a back_url field to the Rate for that will store the redirect path.
* Used in the User Administration panel so RatesController can redirect back to
  the panel as needed.

  #1914

--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -23,6 +23,7 @@
       </td>
       <td align="center">
         <%= f.hidden_field "user_id" %>
+        <%= hidden_field_tag "back_url", @back_url %>
         <%= submit_tag l(:button_add),:class => 'button-small' -%>
       </td>
 	</tr>
