Show different buttons based on if the Rate is new. #1914

--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -24,7 +24,7 @@
       <td align="center">
         <%= f.hidden_field "user_id" %>
         <%= hidden_field_tag "back_url", @back_url %>
-        <%= submit_tag l(:button_add),:class => 'button-small' -%>
+        <%= submit_tag((@rate.new_record? ? l(:button_add) : l(:button_update)), :class => 'button-small')-%>
       </td>
 	</tr>
 	</tbody>
