Hacked some column sorting onto RatesController
* Added SortHelper to RatesController
* Init and updating the sorting (pre 0.8 sort_update)
* RatesController#index will only render the layout on non-xhr requests
* Changed Rate.history_for_user to take an order clause
* Added rate_sort_header_tag and rate_sort_link to the SortHelper in order
  to get the correct parameters for sorting Rates
* Added rate_sort_header_tags to the Rate lists

  #1915

--- a/app/views/rates/_list.html.erb
+++ b/app/views/rates/_list.html.erb
@@ -1,7 +1,18 @@
 <table class="list">
 	<thead>
-	  <th style="width:15%"><%= l(:label_date) %></th>
-	  <th><%= l(:label_project) %></th>
+      <%= rate_sort_header_tag("date_in_effect",
+                               :caption => l(:label_date),
+                               :default_order => 'desc',
+                               :style => "width: 15%",
+                               :method => :get,
+                               :update => "rate-history",
+                               :user_id => @user.id) %>
+      <%= rate_sort_header_tag("project_id",
+                               :caption => l(:label_project),
+                               :default_order => 'asc',
+                               :method => :get,
+                               :update => "rate-history",
+                               :user_id => @user.id) %>
 	  <th style="width:15%"><%= l(:rate_label_rate) %></th>
 	  <th style="width:5%"></th>
 	</thead>
