--- a/app/views/users/_rates.html.erb
+++ b/app/views/users/_rates.html.erb
@@ -4,9 +4,15 @@
 <% @back_url = url_for(:controller => 'users', :action => 'edit', :id => @user, :tab => 'rates') %>
 <%= render :partial => 'rates/form' %>
 
+<div id="rate_history">
 <h1><%= l(:rate_label_rate_history) %></h1>
 <%# TODO: Refactor out of the view once there is a hook in the controller (Post 0.8.0). %>
 <%# Can't expect everyone to upgrade at the moment %>
-<% @rates = Rate.history_for_user(@user) %>
+<%    sort_init "#{Rate.table_name}.date_in_effect", "desc" %>
+<%    sort_update # 'date_in_effect' => "#{Rate.table_name}.date_in_effect" %>
+
+
+<% @rates = Rate.history_for_user(@user, "#{Rate.table_name}.date_in_effect desc") %>
 
 <%= render :partial => 'rates/list' %>
+</div>
