--- a/app/views/rates/_list.html.erb
+++ b/app/views/rates/_list.html.erb
@@ -5,13 +5,13 @@
                                :default_order => 'desc',
                                :style => "width: 15%",
                                :method => :get,
-                               :update => "rate-history",
+                               :update => "rate_history",
                                :user_id => @user.id) %>
       <%= rate_sort_header_tag("project_id",
                                :caption => l(:label_project),
                                :default_order => 'asc',
                                :method => :get,
-                               :update => "rate-history",
+                               :update => "rate_history",
                                :user_id => @user.id) %>
 	  <th style="width:15%"><%= l(:rate_label_rate) %></th>
 	  <th style="width:5%"></th>
