--- a/app/views/users/_rates.html.erb
+++ b/app/views/users/_rates.html.erb
@@ -8,9 +8,8 @@
 <h1><%= l(:rate_label_rate_history) %></h1>
 <%# TODO: Refactor out of the view once there is a hook in the controller (Post 0.8.0). %>
 <%# Can't expect everyone to upgrade at the moment %>
-<%    sort_init "#{Rate.table_name}.date_in_effect", "desc" %>
-<%    sort_update # 'date_in_effect' => "#{Rate.table_name}.date_in_effect" %>
-
+<% sort_init "#{Rate.table_name}.date_in_effect", "desc" %>
+<% sort_update ['date_in_effect', 'project_id'] %>
 
 <% @rates = Rate.history_for_user(@user, "#{Rate.table_name}.date_in_effect desc") %>
 
