Sorting the Project column by project name now
* Including projects in Rate.history_for_user
* Moved the valid sort options to a constant on the RatesController
* Changed the ValidSortOptions to use the Project name for project_id
* Updated admin view to use RatesController::ValidSortOptions instead of a
  duplicated string.

  #1915

--- a/app/views/users/_rates.html.erb
+++ b/app/views/users/_rates.html.erb
@@ -9,7 +9,7 @@
 <%# TODO: Refactor out of the view once there is a hook in the controller (Post 0.8.0). %>
 <%# Can't expect everyone to upgrade at the moment %>
 <% sort_init "#{Rate.table_name}.date_in_effect", "desc" %>
-<% sort_update ['date_in_effect', 'project_id'] %>
+<% sort_update RatesController::ValidSortOptions %>
 
 <% @rates = Rate.history_for_user(@user, "#{Rate.table_name}.date_in_effect desc") %>
 
