Added hints to the edit form so a user will not edit a locked Rate. #1919

--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -24,7 +24,11 @@
       <td align="center">
         <%= f.hidden_field "user_id" %>
         <%= hidden_field_tag "back_url", @back_url %>
+        <% if @rate.unlocked? %>
         <%= submit_tag((@rate.new_record? ? l(:button_add) : l(:button_update)), :class => 'button-small')-%>
+        <% else %>
+        <%= image_tag('locked.png') %>
+        <% end %>
       </td>
 	</tr>
 	</tbody>
