Added a standard form for adding a new rate based on the membership row. #1921

--- a/app/views/users/_memberships.rhtml
+++ b/app/views/users/_memberships.rhtml
@@ -25,16 +25,26 @@
     <%# TODO: Hook %>
     <td>
       <% rate = Rate.for(@user, membership.project) %>
-    
+
       <% if rate.default? || rate.nil? %>
         <% if rate.default? %>
         <em><%= number_to_currency(rate.amount) %></em>
         <% end %>
-      [ Set Rate Form ]
+
+        <% form_for(:rate, :url => rates_path) do |f| %>
+
+        <%= f.text_field :amount %>
+        <%= f.hidden_field :date_in_effect, :value => Date.today.to_s %>
+        <%= f.hidden_field :project_id, :value => membership.project.id %>
+        <%= f.hidden_field :user_id, :value => @user.id %>
+        <%= hidden_field_tag "back_url", url_for(:controller => 'users', :action => 'edit', :id => @user, :tab => 'memberships') %>
+
+        <%= submit_tag(l(:rate_label_set_rate), :class => "small") %>
+        <% end %>
       <% else %>
       <strong><%= link_to number_to_currency(rate.amount), { :action => 'edit', :id => @user, :tab => 'rates'} %></strong>
       <% end %>
-      
+
     </td>
 	</tr>
 	</tbody>
