--- a/app/views/users/_memberships.rhtml
+++ b/app/views/users/_memberships.rhtml
@@ -23,7 +23,7 @@
       <%= link_to l(:button_delete), {:action => 'destroy_membership', :id => @user, :membership_id => membership }, :method => :post, :class => 'icon icon-del' %>
     </td>
     <%# TODO: Hook %>
-    <td>
+    <td id="rate_<%= membership.project.id %>">
       <% rate = Rate.for(@user, membership.project) %>
 
       <% if rate.default? || rate.nil? %>
@@ -31,7 +31,7 @@
         <em><%= number_to_currency(rate.amount) %></em>
         <% end %>
 
-        <% form_for(:rate, :url => rates_path) do |f| %>
+        <% remote_form_for(:rate, :url => formatted_rates_path('js')) do |f| %>
 
         <%= f.text_field :amount %>
         <%= f.hidden_field :date_in_effect, :value => Date.today.to_s %>
