Changed the create.rjs so it will replace the td on the admin and project panel.
* td's are now id'ed like rate_project_user

  #1923

--- a/app/views/users/_memberships.rhtml
+++ b/app/views/users/_memberships.rhtml
@@ -23,7 +23,7 @@
       <%= link_to l(:button_delete), {:action => 'destroy_membership', :id => @user, :membership_id => membership }, :method => :post, :class => 'icon icon-del' %>
     </td>
     <%# TODO: Hook %>
-    <td id="rate_<%= membership.project.id %>">
+    <td id="rate_<%= membership.project.id %>_<%= membership.user.id %>">
       <% rate = Rate.for(@user, membership.project) %>
 
       <% if rate.nil? || rate.default? %>
