--- a/app/views/rates/_form.html.erb
+++ b/app/views/rates/_form.html.erb
@@ -13,7 +13,7 @@
       </td>
       <td>
         <%= # TODO: move to controller once a hook is in place for the Admin panel
-          projects = Project.find(:all, :conditions => { :status => Project::STATUS_ACTIVE}, :include => :parent)
+          projects = Project.find(:all, :conditions => { :status => Project::STATUS_ACTIVE})
   
           select_tag("rate[project_id]", project_options_for_select_with_selected(projects, @rate.project))
         %>
