--- a/app/views/users/_membership_rate.html.erb
+++ b/app/views/users/_membership_rate.html.erb
@@ -6,7 +6,7 @@
         <em><%= number_to_currency(rate.amount) %></em>
         <% end %>
 
-        <% remote_form_for(:rate, :url => rates_path(:format => 'js')) do |f| %>
+        <% form_for(:rate, :url => rates_path(:format => 'js')) do |f| %>
 
         <%= f.text_field :amount %>
         <%= f.hidden_field :date_in_effect, :value => Date.today.to_s, :id => "" %>
