Add (some) support for rails 3 and redmine 2

--- a/app/views/users/_rates.html.erb
+++ b/app/views/users/_rates.html.erb
@@ -1,9 +1,9 @@
-<h1><%= l(:rate_label_new_rate) %></h1>
+<!-- <h1><%= l(:rate_label_new_rate) %></h1>
 
 <% @rate = Rate.new(:user => @user ) %>
 <% @back_url = url_for(:controller => 'users', :action => 'edit', :id => @user, :tab => 'rates') %>
-<%= render :partial => 'rates/form' %>
-
+<#%= render :partial => 'rates/form' %>
+-->
 <div id="rate_history">
 <h1><%= l(:rate_label_rate_history) %></h1>
 <%# TODO: Refactor out of the view once there is a hook in the controller (Post 0.8.0). %>
